# buhahah

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
api/: endpoints.py  runner.py
api/api_request/: document_api_request.py  endpoints.py  my_project_api_request.py  project_api_request.py  user_api_request.py
api/auth/: authentication.py
api/common/: client_adapters.py  locust_client_adapter.py  response_adapter.py
api/config/: environment_setup.py
api/core_api/: document_api.py  my_project_api.py  project_api.py  user_api.py
api/utility/: excel_attributes.py  excel_operations.py  file_operations.py  mime_type.py
payloads/: default.json  document.json
tests/api/: conftest.py  test_authentication.py  test_workflow.py
tests/api/fixtures/: authentication.py
